--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "map-viewer",
   "version": "0.0.0",
-  "main": "electron/dist/main.js",
+  "main": "electron/dist/electron/main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
